# fasthtml-pocs

./: .gitignore  chat-basic.py  pyproject.toml
src/fasthtml_pocs/: chat-basic-aws.py  plan.md
